# test-shaders-qml

./: .gitmodules  CMakeLists.txt  DrawArea.qml  MainForm.ui.qml  Makefile  ShadedArea.qml  main.cpp  main.qml  moc_publisher.cpp  moc_receiver.cpp  moc_transmitter.cpp  nohup.out  ossia_includes.h  publisher.cpp  publisher.h  qml.qrc  qrc_qml.cpp  receiver.cpp  receiver.h  test-shaders-qml  test-shaders-qml.pro  test-shaders-qml.pro.user.80132fa  test-shaders-qml.pro.user.8d93f36  transmitter.cpp  transmitter.h
API/Documentation/Examples/: CMakeLists.txt
API/Implementations/Jamoma/Sources/Editor/: Clock.cpp
